web-infras/parser/tests/fixtures/esprima/ES6/for-of/invalid-for-of-array-pattern/output.txt
[SyntaxError]: 'for-of' loop variable declaration may not have an initializer. (1,14)
1|for (var [p]=q of r);
 |            ^
